20040611 ui/gtk/{gtkjoystick.c,roms.c}: remove a couple of warnings.
20040615 snapshot.c: fall back to +2A if +3e not available.
20040615 ay.[ch],psg.c: remove duplicated literal constant for number
	 of AY registers.
20040616 configure.in,menu_data.c,perl/cpp-perl.pl,ui/gtk/Makefile.am,
	 widget/Makefile.am: use custom preprocessor to parse menu_data.c
	 as OS X 10.1(?)'s preprocessor requires proper C syntax.
20040616 debugger/{commandl.l,commandy.y,debugger_internals,h,expression.c}:
	 remove duplicated literal constants.
20040616 debugger/{breakpoint.c,commandl.l,commandy.y,debugger_internals.h}:
	 make setting breakpoints in non-RAM pages slightly more user
	 friendly.
20040617 ui/gtk/roms.c: add ellipses to the 'Select' buttons.
20040617 man/fuse.1: man page update. More updates welcome :-)
20040618 AUTHORS,ChangeLog,README,THANKS: doc updates working towards a
	 0.7.0 release.
20040618 joystick.c,widget/menu.c: don't set joystick type to an invalid
	 value if the widget joystick selector cancelled.
20040618 ui/svga/svgakeyboard.c: update for the new input layer scheme.
20040618 input.[ch],ui/uijoystick.c,ui/sdl/sdljoystick.c: allow the libjsw
	 and SDL joystick codes to pass more than one fire button through
	 to the input layer.
20040618 hacking/input.txt: add some documentation on the input layer.
20040619 z80/z80.c: save/restore the high bit of R correctly (thanks, Jan
         Samohýl).
20040620 zxatasp.c,zxcf.c: more literal constant removal.
20040620 README,autogen.sh: add script to do the autotools invocation.
20040621 configure.in: restore autoconf2.13 compatability.
20040621 man/fuse.1: small man page update.
20040621 ChangeLog: Darren did the initial Spectrum SE emulation.
20040623 man/fuse.1: Updates for Interface II and IDE command line options.
20040626 spectrum.c: Now need to include "sound/lowlevel.h" to get
         ALWAYS_USE_TIMER defined for SDL
20040627 sound/sdlsound.c: Fuse generates 16 bit sound in signed host byte
         order.